--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="socialmedia">
                 <a href="https://www.instagram.com/dipak_vispute/" class="instagram"><img src="images/instagram.svg" alt="inst"class="social"></a>
                 <a href="https://www.linkedin.com/in/dipak-vispute-124337214" class="linkdin"><img src="images/linkedin.svg" alt="link"class="social"></a>
-                <a href="" class="facebool"><img src="images/facebook.svg" alt="fb"class="social"></a>
+                <a href="" class="facebook"><img src="images/facebook.svg" alt="fb"class="social"></a>
+                <a href="https://github.com/Dipak8657" class="github"><img src="images/github.svg" alt="git" class="social"></a>
             </div>
         </div>
       
