--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                     <img src="images/stock.png" >
                     <div class="projectdescription">
                         <h3>Material Handling and Storage System</h3>
-                        <p> •	Design And Developing Assembly Section. It consists of Design of Layout, Implementation of Inventory Management, Location Identification, KANBAN Implementation, lead time reduction in material Movement,  Visual Management.
+                          <p> •Design And Developing Assembly Section. It consists of <span id="dots">.....</span>
+                              <span id="more">Design of Layout, Implementation of Inventory Management, Location Identification, KANBAN Implementation, lead time reduction in material Movement,  Visual Management.
                             •	Making SOP of assembly and packaging.
                             •	Making of Value Stream Mapping.
                             •	Designing the wrapping machine
-                            </p>
+                        </span></p>
+                        <span onclick=" myfunction()" id="myBtn"> Read more...</span>
                     </div>
                 </div>
                 <div class="projectcontainer">
@@ -90,5 +92,6 @@
             <button class='submitButton' onClick={submit()}>Connect</button>
           </section>
     </main>
+              <script src="./index.js"></script>
 </body>
 </html>
