--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="images/pro2.png" alt="" class="profileimage">
         <div class="herosectiondetailes">
             <h1>Dipak vispute </h1>
-            <h3>full-stack web developer </h3>
+            <h3>Java full-stack developer </h3>
             <div class="socialmedia">
                 <a href="https://www.instagram.com/dipak_vispute/" class="instagram"><img src="images/instagram.svg" alt="inst"class="social"></a>
                 <a href="https://www.linkedin.com/in/dipak-vispute-124337214" class="linkdin"><img src="images/linkedin.svg" alt="link"class="social"></a>
